fix: overflow and cursor

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -20,6 +20,7 @@ h1{
     background: -webkit-linear-gradient(0deg, #20F0F1, #F98EF7);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    cursor: default;
 }
 nav{
     display: flex;
