--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,9 @@
     /**box-sizing: border-box;**/
     background-color: #0E1213;
 }
-body{
+html, body{
     box-sizing: border-box;
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
